# yuru-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  V2升级说明文档.md  cookies.txt  demo_result.json  docker-compose.yml  plan_req.json  plan_resp.json  plan_resp2.json  profile_req.json  pyproject.toml  requirements.txt  run.py  演示方案.md
app/: auth.py  main.py  mcp_server.py  tracing.py
app/agents/v3/: base.py  planner.py  planner_runtime.py  planning_run.py  poi_agent.py  profile_agent.py  risk_agent.py  scheduler.py  state.py  tool.py  tools.py  weather_agent.py
app/db/: __init__.py  database.py  init.sql  seed.sql
app/integrations/: __init__.py  config_manager.py  llm_client.py  map.py  weather.py
app/knowledge/: __init__.py  checklist_generator.py  embedder.py  ingest.py  retriever.py  vector_store.py
app/knowledge/documents/: _template.md  beach_travel.md  business_travel.md  elderly_travel.md  family_travel.md  pet_travel.md  photography_travel.md  plateau_travel.md  rainy_season.md  solo_travel.md  winter_travel.md
app/mock/: attraction_data.py  hotel_data.py  restaurant_data.py  transport_data.py  xiaohongshu_data.py
app/static/css/: style.css
app/static/js/: main.js  (+1 more)
app/templates/: admin.html  admin_v3.html  base.html  base_v3.html  dashboard.html  history.html  index.html  itinerary.html  login.html  plan.html  planning.html  result.html  trace.html
docs/: subagent-communication-design.md
static_demo/: admin.html  index.html  itinerary.html  planning.html
static_demo/css/: style.css
static_demo/js/: main.js
tests/: conftest.py  test_api_basic.py  test_auth.py  test_dashboard.py  test_database.py  test_llm_cache.py  test_mcp_server.py  test_metrics_enhanced.py  test_planner_agent.py  test_poi_agents.py  test_request_logs.py  test_risk_agent.py  test_stream.py  test_structured_and_metrics.py  test_weather.py
