[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingdong-travel"
version = "3.0.0"
description = "AI-powered multi-agent travel planning system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Author" },
]
keywords = ["travel", "llm", "agent", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.12.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.32",
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.4.0",
]

[project.scripts]
lingdong-travel = "run:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
